[package]
name = "rpma"
version = "0.1.0"
edition = "2024"

[dependencies]
aes = "0.8.4"
anyhow = "1.0.98"
blake3 = "1.8.2"
bytes = "1.10.1"
clap = { version = "4.5.32", features = ["derive"] }
ctr = "0.9.2"
ed25519-dalek = "2.2.0"
env_logger = "0.11.8"
futures = "0.3.31"
getrandom = "0.3.3"
hex = "0.4.3"
hkdf = "0.12.4"
libc = "0.2.175"
log = "0.4.27"
rand = "0.8"
rustyline = "17.0.1"
sha2 = "0.10.9"
subtle = "2.6.1"
tokio = { version = "1.47.1", features = ["full"] }
x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
